# Particles-Sim-Learn

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/core/: particle.h  world.cpp  world.h
src/spatial/: spatialhash.cpp  spatialhash.h
src/threadpool/: threadpool.cpp  threadpool.h
